# Micro-ROS-RP2350

./: .gitignore  .gitmodules  README.md
.github/workflows/: analyze-pico.yml  analyze-uros.yml  pico-build.yml  pico-codeql.yml  rp2_env_setup.sh
pico_fw_ws/: CMakeLists.txt  README.md  micro_ros.cmake
pico_fw_ws/.devcontainer/: Dockerfile  devcontainer.json  install_pico.sh  post_create.sh
pico_fw_ws/.devcontainer/uros_agent/: uros_agent_run.sh
pico_fw_ws/.devcontainer/vscode_config/: launch.json  settings.json  tasks.json
pico_fw_ws/libfreertos/Config/: FreeRTOSConfig.h
pico_fw_ws/libmicroros/: build_uros.sh  my_toolchain.cmake
pico_fw_ws/src/: CMakeLists.txt
pico_fw_ws/src/lib/: CMakeLists.txt
pico_fw_ws/src/pico/: CMakeLists.txt  main.c++  pico_uart_transport.c  uros_allocators.c
pico_fw_ws/src/posix/: functions.c
